refactor: enforce strict hexagonal architecture, add Kafka resilience, and refine codebase.